--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ header .main-nav ul li a:hover{
   
   .container {
     padding: 2px 5px;
+    animation: transitionIn 0.75s;
   }
 
   main .card {
@@ -406,6 +407,20 @@ main .gallery .grid {
 .container input[type="submit"]:hover{
     background: chocolate;
     box-shadow: 40px 40px 40px 40px chocolate inset;
+}
+
+
+/*Load in transition Effect*/
+@keyframes transitionIn {
+    from{
+        opacity:0;
+        transform:rotateX(-10deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: rotate(0);
+    }
 }
 
 
